<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
<!--   This is just for initial splash screen for user.-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/starting"
        android:visibility="invisible">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Welcome To Quiz App"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="50sp"
            android:textStyle="bold"/>
        <Button
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:text="Tap to GO"
            android:id="@+id/go"
            android:textSize="50sp"
            android:background="#9E9D24"
            android:layout_margin="50dp"
            android:textAlignment="center"
            />

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nextLayout"
        android:visibility="visible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"

            >
            <!--        Question 1-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="wrap_content"
                        android:text="@string/question_one"
                        android:textStyle="bold"
                        />

                </LinearLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/q1RadioGroup">

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/q1RadioButton1"
                        android:checked="false"
                        android:text="@string/q1o1"
                        />

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/q1RadioButton2"
                        android:checked="false"
                        android:text="@string/q1o2"
                        />

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/q1RadioButton3"
                        android:checked="false"
                        android:text="@string/q1o3"
                        />

                </RadioGroup>

            </LinearLayout>
            <!--  Question 2-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/question_two"
                         />

                </LinearLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/q2RadioGroup">

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/q2RadioButton1"
                        android:checked="false"
                        android:text="@string/q2O1"
                        />

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/q2RadioButton2"
                        android:checked="false"
                        android:text="@string/q2O2"
                        />

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/q2RadioButton3"
                        android:checked="false"
                        android:text="@string/q2O3"
                        />

                </RadioGroup>

            </LinearLayout>
            <!--  Question 3-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="9"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:text="@string/question_three"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp">

                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/q3CheckBox1"
                        android:text="@string/q3O1"/>
                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/q3CheckBox2"
                        android:text="@string/q3O2"
                       />
                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/q3CheckBox3"
                        android:text="@string/q3O3"
                        />

                </LinearLayout>

            </LinearLayout>
            <!--  Question 4-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/question_four"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp">

                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/q4CheckBox1"
                        android:text="@string/q4O1"
                       />
                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/q4CheckBox2"
                        android:text="@string/q4O2"
                        />
                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/q4CheckBox3"
                        android:text="@string/q4O3"
                        />
                </LinearLayout>

            </LinearLayout>
            <!--  Question 5-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="9"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/question_five" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="2dp"
                    >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/q5EditText"
                        android:hint="Your answer(one word)"
                        />


                </LinearLayout>

            </LinearLayout>
            <!--  Question 6-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/question_six" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="2dp"
                    >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/q6EditText"
                        android:hint="Your answer(one word)"
                       />


                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="Submit"
                android:id="@+id/submit"
                android:background="#0277BD"
                />




        </LinearLayout>
    </ScrollView>
</RelativeLayout>